tests/baselines/reference/invalidStringAssignments.errors.txt
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(3,5): error TS2322: Type '文字' is not assignable to type '真假'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(4,5): error TS2322: Type '文字' is not assignable to type '数字'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(5,5): error TS2322: Type '文字' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(9,5): error TS2322: Type '文字' is not assignable to type 'C'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(12,5): error TS2322: Type '文字' is not assignable to type 'I'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(14,5): error TS2322: Type '1' is not assignable to type '{ baz: 文字; }'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(15,5): error TS2322: Type '1' is not assignable to type '{ 0: 数字; }'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(18,1): error TS2539: Cannot assign to 'M' because it is not a variable.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(21,5): error TS2322: Type '文字' is not assignable to type 'T'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(23,1): error TS2539: Cannot assign to 'i' because it is not a variable.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(26,5): error TS2322: Type '文字' is not assignable to type 'E'.


==== tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts (11 errors) ====
    var x = '';
    
    var a: boolean = x;
        ~
!!! error TS2322: Type '文字' is not assignable to type '真假'.
    var b: number = x;
        ~
!!! error TS2322: Type '文字' is not assignable to type '数字'.
    var c: void = x;
        ~
!!! error TS2322: Type '文字' is not assignable to type '无值'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~
!!! error TS2322: Type '文字' is not assignable to type 'C'.
    
    interface I { bar: string; }
    var f: I = x;
        ~
!!! error TS2322: Type '文字' is not assignable to type 'I'.
    
    var g: { baz: string } = 1;
        ~
!!! error TS2322: Type '1' is not assignable to type '{ baz: 文字; }'.
    var g2: { 0: number } = 1;
        ~~
!!! error TS2322: Type '1' is not assignable to type '{ 0: 数字; }'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2539: Cannot assign to 'M' because it is not a variable.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type '文字' is not assignable to type 'T'.
    }
    i = x;
    ~
!!! error TS2539: Cannot assign to 'i' because it is not a variable.
    
    enum E { A }
    var j: E = x;
        ~
!!! error TS2322: Type '文字' is not assignable to type 'E'.